2021-05-23  Robby Stephenson  <robby@periapsis.org>

	* Improve some entry templates for table layout.

2021-05-16  Robby Stephenson  <robby@periapsis.org>

	* Allow user-entered language selection for TheMovieDB.

2021-05-09  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.1.

2021-05-08  Robby Stephenson  <robby@periapsis.org>

	* Updated KinoPoisk data source.
	* Updated Filmaster data source.

2021-05-06  Robby Stephenson  <robby@periapsis.org>

	* Improved image loading to account for orientation (Bug 436683).

2021-05-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed allowing empty beginning rows in table fields.

2021-04-25  Robby Stephenson  <robby@periapsis.org>

	* Fixed relative links in the Entry View (Bug 436071).

2021-04-14  Robby Stephenson  <robby@periapsis.org>

	* Updated DBC data source.

2021-04-11  Robby Stephenson  <robby@periapsis.org>

	* Added DBUS reply for install templates and scripts.

2021-04-04  Robby Stephenson  <robby@periapsis.org>

	* Added capability to save charts as PNG files.
	* Added Year Distribution chart report.

2021-03-26  Robby Stephenson  <robby@periapsis.org>

	* Added TheTVDB data source (Bug 428430).

2021-03-18  Robby Stephenson  <robby@periapsis.org>

	* Added TV series to TMDb data source (Bug 357128).

2021-03-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.

2021-03-07  Robby Stephenson  <robby@periapsis.org>

	* Updated Douban data source.
	* Fixed crashing bug on Windows (Bug 422468).

2021-02-23  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.3.5.

2021-02-15  Robby Stephenson  <robby@periapsis.org>

	* Improved MultiFetcher to chain data source searches in order.

2021-02-07  Robby Stephenson  <robby@periapsis.org>

	* Added UPCItemDB.com data source.
	* Added flag for conditional bibtex importing with btparse.

2020-12-27  Robby Stephenson  <robby@periapsis.org>

	* Added additional report with QtCharts.
