@@ -30,6 +30,7 @@
 #include "../translators/tellicoimporter.h"
 #include "../collections/bookcollection.h"
 #include "../collections/videocollection.h"
+#include "../collections/musiccollection.h"
 #include "../collectionfactory.h"
 #include "../entry.h"
 #include "../document.h"
@@ -51,6 +52,7 @@ void HtmlExporterTest::initTestCase() {
   Tellico::ImageFactory::init();
   Tellico::RegisterCollection<Tellico::Data::BookCollection> registerBook(Tellico::Data::Collection::Book, "book");
   Tellico::RegisterCollection<Tellico::Data::VideoCollection> registerVideo(Tellico::Data::Collection::Video, "video");
+  Tellico::RegisterCollection<Tellico::Data::VideoCollection> registerMusic(Tellico::Data::Collection::Album, "album");
   Tellico::DataFileRegistry::self()->addDataLocation(QFINDTESTDATA("../../xslt/tellico2html.xsl"));
   Tellico::DataFileRegistry::self()->addDataLocation(QFINDTESTDATA("../../xslt/entry-templates/Fancy.xsl"));
   Tellico::DataFileRegistry::self()->addDataLocation(QFINDTESTDATA("../../xslt/report-templates/Column_View.xsl"));
@@ -213,13 +215,15 @@ void HtmlExporterTest::testDirectoryNames() {
   QCOMPARE(exp.fileDirName(), QStringLiteral("/"));
 }
 
-void HtmlExporterTest::testEntryTemplates() {
+void HtmlExporterTest::testTemplates() {
   const QString tidy = QStandardPaths::findExecutable(QStringLiteral("tidy"));
   if(tidy.isEmpty()) {
     QSKIP("This test requires tidy", SkipAll);
   }
 
   QFETCH(QString, xsltFile);
+  QFETCH(QString, tellicoFile);
+  Tellico::ImageFactory::clean(true);
 
   QStringList tidyArgs = { QStringLiteral("-errors"),
                            QStringLiteral("-quiet"),
@@ -231,7 +235,7 @@ void HtmlExporterTest::testEntryTemplates() {
   // suppress warning about no tidyrc file
   tidyEnv.insert("HTML_TIDY", "/dev/null");
 
-  QUrl url = QUrl::fromLocalFile(QFINDTESTDATA(QStringLiteral("data/ted_lasso.xml")));
+  QUrl url = QUrl::fromLocalFile(tellicoFile);
   Tellico::Import::TellicoImporter importer(url);
   Tellico::Data::CollPtr coll = importer.collection();
 
@@ -239,8 +243,10 @@ void HtmlExporterTest::testEntryTemplates() {
   exporter.setParseDOM(false); // shows error for <wbr> tags and is not necessary for check
   exporter.setEntries(coll->entries());
   exporter.setXSLTFile(xsltFile);
+  exporter.setPrintGrouped(true);
 
   const QString output = exporter.text();
+  QVERIFY(!output.contains(QStringLiteral("<p><p>")));
   QProcess tidyProc;
   tidyProc.setProcessEnvironment(tidyEnv);
   tidyProc.setProcessChannelMode(QProcess::SeparateChannels);
@@ -263,14 +269,26 @@ void HtmlExporterTest::testEntryTemplates() {
   tidyProc.close();
   QCOMPARE(tidyProc.exitStatus(), QProcess::NormalExit);
   // tidy exit codes are 0 for none, 1 for warnings only, 2 for errors
-  QCOMPARE(tidyProc.exitCode(), 0);
+  QVERIFY(tidyProc.exitCode() < 2);
 }
 
-void HtmlExporterTest::testEntryTemplates_data() {
+void HtmlExporterTest::testTemplates_data() {
   QTest::addColumn<QString>("xsltFile");
+  QTest::addColumn<QString>("tellicoFile");
 
-  QTest::newRow("Default") << QStringLiteral("Default.xsl");
-  QTest::newRow("Fancy") << QStringLiteral("Fancy.xsl");
-  QTest::newRow("Compact") << QStringLiteral("Compact.xsl");
-  QTest::newRow("Video") << QStringLiteral("Video.xsl");
+  QString ted = QFINDTESTDATA(QStringLiteral("data/ted_lasso.xml"));
+  QString moody = QFINDTESTDATA(QStringLiteral("data/moody_blue.xml"));
+
+  QDir entryDir(QFINDTESTDATA(QStringLiteral("../../xslt/entry-templates/Default.xsl")));
+  entryDir.cdUp();
+  foreach(const QString& file, entryDir.entryList({"*.xsl"}, QDir::Files)) {
+    QTest::newRow(file.toUtf8().constData()) << file << ted;
+    QTest::newRow(file.toUtf8().constData()) << file << moody;
+  }
+  QDir reportDir(QFINDTESTDATA(QStringLiteral("../../xslt/report-templates/Column_View.xsl")));
+  reportDir.cdUp();
+  foreach(const QString& file, reportDir.entryList({"*.xsl"}, QDir::Files)) {
+    QTest::newRow(file.toUtf8().constData()) << file << ted;
+    QTest::newRow(file.toUtf8().constData()) << file << moody;
+  }
 }
